fix(Student): Button icon alignment
#1263

--- a/src/assets/wise5/components/discussion/discussion-student/discussion-student.component.scss
+++ b/src/assets/wise5/components/discussion/discussion-student/discussion-student.component.scss
@@ -17,3 +17,7 @@
     border-top: 0em;
   }
 }
+
+.mat-icon {
+  margin: 0px !important;
+}
