--- a/src/assets/wise5/components/label/label-student/label-student.component.scss
+++ b/src/assets/wise5/components/label/label-student/label-student.component.scss
@@ -42,3 +42,7 @@ $margin-spacing: 20px;
 .label-canvas {
   border: 1px solid black;
 }
+
+.mat-icon {
+  margin: 0px;
+}
